Fixed: Bug 58881 - Messed up appointment conflict dialog (mobile only)
Make sure there is enough space to display date and time correctly without overlapping.

--- a/ui/apps/io.ox/calendar/style.less
+++ b/ui/apps/io.ox/calendar/style.less
@@ -519,7 +519,7 @@
             line-height: 24px;
         }
 
-        .date-time { padding-top: 14px; }
+        &.conflict-overview .date-time { float: none; height: auto; }
 
         .recurrence { margin-bottom: 10px; }
 
